# python-service-project

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: bot.py  google_api_auth.py  json_handler.py  main.py  parser.py  services.py  settings.py  telegram_api_handler.py  validator.py
