[tool.poetry]
name = "python-service-project"
version = "0.1.0"
description = ""
authors = ["Egor Nikitin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
click = "^8.1.7"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pydantic = "^2.8.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
vulture = "^2.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    )/

)
'''


[tool.isort]
line_length = 119


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
